public/assets/css/main.css
/* ... */
.team .team-member .member-img {
    position: relative;
    overflow: hidden;
}

.team .team-member .social {
    position: absolute;
    left: 0;
    bottom: 0;
    right: 0;
    height: 40px;
    opacity: 0;
    transition: ease-in-out 0.3s;
    background: color-mix(in srgb, var(--background-color), transparent 20%);
    display: flex;
    align-items: center;
    justify-content: center;
}

.team .team-member .social a {
    transition: color 0.3s;
    color: var(--heading-color);
    margin: 0 10px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.team .team-member .social a i {
    line-height: 0;
}

.team .team-member .social a:hover {
    color: var(--accent-color);
}

.team .team-member .social i {
    font-size: 18px;
    margin: 0 2px;
}

.team .team-member .member-info {
    padding: 25px 15px;
    text-align: center;
}

.team .team-member .member-info h4 {
    font-weight: 700;
    margin-bottom: 5px;
    font-size: 18px;
    color: color-mix(in srgb, var(--default-color), transparent 20%);
}

.team .team-member .member-info span {
    display: block;
    font-size: 13px;
    font-weight: 400;
    color: color-mix(in srgb, var(--default-color), transparent 40%);
}

.team .team-member .member-info p {
    font-style: italic;
    font-size: 14px;
    line-height: 26px;
    color: color-mix(in srgb, var(--default-color), transparent 40%);
}

.team .team-member:hover .social {
    opacity: 1;
}

.team-member-image {
    width: 248px;
    height: 248px;
}

@media (max-width: 576px) {
    .team-member-image {
        min-width: 485px;
        height: 485px;
    }
}

/*--------------------------------------------------------------
# Testimonials Section
--------------------------------------------------------------*/
.testimonials .testimonial-item {
    background-color: var(--surface-color);
    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.1);
    padding: 30px;
    position: relative;
    height: 100%;
}

.testimonials .testimonial-item .testimonial-img {
    width: 90px;
    border-radius: 50px;
    border: 6px solid var(--background-color);
    float: left;
    margin: 0 10px 0 0;
}

.testimonials .testimonial-item h3 {
    font-size: 18px;
    font-weight: bold;
    margin: 10px 0 5px 0;
}

.testimonials .testimonial-item h4 {
    font-size: 14px;
    color: color-mix(in srgb, var(--default-color), transparent 20%);
    margin: 0;
}

.testimonials .testimonial-item .stars {
    margin: 10px 0;
}

.testimonials .testimonial-item .stars i {
    color: #ffc107;
    margin: 0 1px;
}

.testimonials .testimonial-item .quote-icon-left,
.testimonials .testimonial-item .quote-icon-right {
    color: color-mix(in srgb, var(--accent-color), transparent 50%);
    font-size: 26px;
    line-height: 0;
}

.testimonials .testimonial-item .quote-icon-left {
    display: inline-block;
    left: -5px;
    position: relative;
}

.testimonials .testimonial-item .quote-icon-right {
    display: inline-block;
    right: -5px;
    position: relative;
    top: 10px;
    transform: scale(-1, -1);
}

.testimonials .testimonial-item p {
    font-style: italic;
    margin: 15px 0 0 0;
    padding: 0;
}

/*--------------------------------------------------------------
# Features Section
--------------------------------------------------------------*/
.features .features-item {
    background-color: var(--surface-color);
    display: flex;
    align-items: center;
    padding: 20px;
    transition: 0.3s;
    border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
    position: relative;
}

.features .features-item i {
    font-size: 32px;
    padding-right: 10px;
    line-height: 0;
}

.features .features-item h3 {
    font-weight: 700;
    margin: 0;
    padding: 0;
    line-height: 1;
    font-size: 16px;
}

.features .features-item h3 a {
    color: var(--heading-color);
    transition: 0.3s;
}

.features .features-item:hover {
    border-color: var(--accent-color);
}

.features .features-item:hover h3 a {
    color: var(--accent-color);
}

/*--------------------------------------------------------------
# Service Details Section
--------------------------------------------------------------*/
.service-details .services-list {
    background-color: var(--surface-color);
    padding: 10px 30px;
    border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
    margin-bottom: 20px;
}

.service-details .services-list a {
    display: block;
    line-height: 1;
    padding: 8px 0 8px 15px;
    border-left: 3px solid
        color-mix(in srgb, var(--default-color), transparent 70%);
    margin: 20px 0;
    color: color-mix(in srgb, var(--default-color), transparent 20%);
    transition: 0.3s;
}

.service-details .services-list a.active {
    color: var(--heading-color);
    font-weight: 700;
    border-color: var(--accent-color);
}

.service-details .services-list a:hover {
    border-color: var(--accent-color);
}

.service-details .services-img {
    margin-bottom: 20px;
}

.service-details h3 {
    font-size: 26px;
    font-weight: 700;
}

.service-details h4 {
    font-size: 20px;
    font-weight: 700;
}

.service-details p {
    font-size: 15px;
}

.service-details ul {
    list-style: none;
    padding: 0;
    font-size: 15px;
}

.service-details ul li {
    padding: 5px 0;
    display: flex;
    align-items: center;
}

.service-details ul i {
    font-size: 20px;
    margin-right: 8px;
    color: var(--accent-color);
}

/*--------------------------------------------------------------
# Portfolio Details Section
--------------------------------------------------------------*/
.portfolio-details .portfolio-details-slider img {
    width: 100%;
}

.portfolio-details .swiper-wrapper {
    height: auto;
}

.portfolio-details .swiper-button-prev,
.portfolio-details .swiper-button-next {
    width: 48px;
    height: 48px;
}
/* ... */

